--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <title>Flappy bird!</title>
   </head>
   <body>
-    <script src="./src/index.js"></script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
